--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -3,7 +3,7 @@
 
   <div @animateForwardStagger class="sets-container">
     <div class="animate-stagger set-container">
-      <div class="heading">key skills</div>
+      <div class="heading">Core skills</div>
       <div class="set">
         <div class="skill">
           <div class="underlying-bar">
