--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -27,7 +27,9 @@
       </div>
 
       <div class="site-contact-text email-address">
-        <span class="contact-icon"><i class="bi bi-envelope-fill"></i></span>
+        <span class="contact-icon">
+          <i class="bi bi-envelope-fill"></i>
+        </span>
         <span class="email-address-text"
           ><a href="mailto:yingishirinda@gmail.com"
             >yingishirinda&#64;gmail.com</a
@@ -36,20 +38,10 @@
       </div>
 
       <div class="site-contact-text theme-button" >
-        <!-- <label class="toggle-switch" title="Toggle theme">
-          <input type="checkbox" [checked]="isChecked" title="Toggle theme" (click)="toggleTheme()" />
-          <span class="slider"></span>
-        </label> -->
-
         <div class="site-theme contact-icon" title="Toggle Theme" (click)="toggleTheme()">
           <i class="bi bi-circle-half"></i>
         </div>
       </div>
-    </div>
-
-    <div class="current-weather">
-      <div class="weather-icon"><i class="bi bi-cloud-sun-fill"></i></div>
-      <div class="weather-text">22°C</div>
     </div>
   </div>
 </div>
