--- a/src/styles/layout/_page-intro.scss
+++ b/src/styles/layout/_page-intro.scss
@@ -52,7 +52,8 @@
             display: flex;
             flex-direction: column;
             row-gap: 11px;
-            text-align: left;   
+            text-align: left;
+            // opacity: 1;   
 
             .page-title {
                 @include global-font-jura;
