--- a/src/app/features/contact/pages/contact/contact.component.html
+++ b/src/app/features/contact/pages/contact/contact.component.html
@@ -1,5 +1,5 @@
 <div class="contact-page-main" id="contact-page-main">
-  <div class="page-content-intro-hr">contact form</div>
+  <div @animateSlideInFromTop  class="page-content-intro-hr">contact form</div>
 
   <div class="contact-form-container">
 
@@ -11,7 +11,7 @@
 
       <div @animateForwardStagger  class="contact-info">
         <fieldset formGroupName="personalDetails" class="animate-stagger">
-          <legend>Your Details</legend>
+          <legend>Personal Details</legend>
 
           <div class="form-control-group  animate-stagger">
             <input
@@ -101,7 +101,7 @@
         </fieldset>
 
         <fieldset formGroupName="messageDetails" class=" animate-stagger">
-          <legend>Your Message</legend>
+          <legend>Message</legend>
 
           <div class="form-control-group  animate-stagger">
             <input
