--- a/src/app/features/skills-set/pages/skills-set/skills-set.component.html
+++ b/src/app/features/skills-set/pages/skills-set/skills-set.component.html
@@ -1,5 +1,5 @@
 <div class="skils-set-page-main" id="skils-set-page-main">
-  <div class="page-content-intro-hr">key skills & expertise</div>
+  <div @animateSlideInFromTop class="page-content-intro-hr">skills & expertise</div>
 
   <div @animateForwardStagger class="sets-container">
     <div class="animate-stagger set-container">
