--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -1,15 +1,17 @@
 <div id="site-identity" class="site-identity">
   <div class="site-names">
+
     <div class="site-logo" (click)="redirectToHome()">
       <img src="./img/site-logo/logo.png" alt="Site Logo" />
     </div>
+    
     <div class="site-title-and-description">
       <div class="site-title">
         <div class="title-name" (click)="redirectToHome()">
           <h1>PORTFOLIO</h1>
         </div>
         <div class="site-theme" title="Toggle Theme" (click)="toggleTheme()">
-          <i class="bi bi-circle-half"></i>
+          <i class="bi bi-mask"></i>
         </div>
       </div>
       <p class="site-description" (click)="redirectToHome()">
@@ -39,7 +41,7 @@
 
       <div class="site-contact-text theme-button" >
         <div class="site-theme contact-icon" title="Toggle Theme" (click)="toggleTheme()">
-          <i class="bi bi-circle-half"></i>
+          <i class="bi bi-mask"></i>
         </div>
       </div>
     </div>
