--- a/src/styles/abstracts/_mixins.scss
+++ b/src/styles/abstracts/_mixins.scss
@@ -67,6 +67,19 @@
 
 }
 
+@mixin call-to-action-img-bg {
+      background-color: $light-primary-bg-color;
+    background-image: url('/img/call-to-action/color-bg-9.jpg');
+    /* path to your image */
+    background-size: cover;
+    /* makes it fill the screen */
+    background-position: center;
+    /* centers the image */
+    background-repeat: no-repeat;
+    /* prevents tiling */
+    margin: 0;
+}
+
 @mixin page-content-intro-hr {
 
   display: flex;
