--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -176,8 +176,8 @@
                 .project-name {
                     @include heading-light;
                     margin-bottom: 0;
-                    border-radius: 0 $spacing-xxs $spacing-xxs 0;
-                    border-left: 5px solid red;
+                    border-radius: $spacing-xxs ;
+                    // border-left: 5px solid red;
                     padding: 4px $spacing-sm;
                     cursor: pointer;
                     color: brown;
@@ -623,12 +623,7 @@
 
                 .project-details-container {
                     text-align: left;
-
-                    .project-name {
-                        border-radius: 0 $spacing-xs $spacing-xs 0;
-                        border-left: 5px solid red;
-                    }
-
+                    
                     .project-summary {
                         padding: $spacing-xs - 2px;
                     }
