--- a/src/styles/themes/_dark.scss
+++ b/src/styles/themes/_dark.scss
@@ -7,28 +7,29 @@
     .site-grid-container {
         background-color: var(--bg-color);
         color: var(--text-color);
-        
+
         #site-identity {
-    
-    .site-contact-details {
 
-        .contact-details {
-   
-            .site-contact-text {
-               @include heading-dark;
+            .site-contact-details {
+
+                .contact-details {
+
+                    .site-contact-text {
+                        @include heading-dark;
+                    }
+                }
+
+                .current-weather {
+                    display: none;
+                }
             }
-        }
-
-        .current-weather {
-            display: none;
-        }
-    }
         }
 
         #page-instroduction {
             //  background-image: linear-gradient(to right, #abbaab 0%, #ffffff 51%, #abbaab 100%);
             // background-image: linear-gradient(to right, #000428 0%, #004e92  51%, #000428  100%);
-            background-image: linear-gradient(to right, #200122 0%, #6f0000 51%, #200122 100%);
+            // background-image: linear-gradient(to right, #200122 0%, #6f0000 51%, #200122 100%);
+            @include call-to-action-img-bg;
 
             .page-description {
                 color: $light-neutral-font-color;
@@ -63,6 +64,7 @@
         #home-page-main {
 
             .page-content-intro-hr {
+
                 &::before,
                 &::after {
                     border-bottom: 1px solid $light-default-font-color;
@@ -73,6 +75,7 @@
                 padding: 18px 10%;
                 border-radius: $spacing-sm;
                 text-align: center;
+                // box-shadow: $dark-box-shadow;
 
                 .developer-name {
                     font-size: $font-size-lg + 8px;
@@ -122,6 +125,7 @@
                         &:hover {
                             background-color: $error-color;
                             color: $light-neutral-font-color;
+                            // opacity: 0.7;
 
                             i {
                                 color: $light-neutral-font-color;
@@ -133,6 +137,7 @@
                 .developer-intro {
                     margin: 5px 0;
                     line-height: 1.6;
+
 
                     .highlight {
                         font-weight: bold;
@@ -463,19 +468,20 @@
                 box-shadow: $dark-box-shadow;
                 padding: $spacing-sm;
                 border-radius: $spacing-xs;
-                
+
                 form {
                     .contact-info {
                         fieldset {
                             border: 1px solid $light-default-font-color;
+
                             .input-form-control {
                                 background-color: rgba($dark-primary-bg-color, 0.1);
                                 border: 1px solid $light-default-font-color;
 
-                                  &::placeholder {
-                                font-size: 12px;
-                                color: rgb($light-default-font-color, 0.4);
-                            }
+                                &::placeholder {
+                                    font-size: 12px;
+                                    color: rgb($light-default-font-color, 0.4);
+                                }
                             }
                         }
                     }
