Added form-control icons

--- a/src/app/features/about/pages/about/about.component.html
+++ b/src/app/features/about/pages/about/about.component.html
@@ -1,10 +1,10 @@
 <div class="about-page-main" id="about-page-main">
-  <div @animateSlideInFromTop class="page-content-intro-hr">backgrond </div>
+  <div @animateSlideInFromTop class="page-content-intro-hr"> about developer </div>
 
   <div @animateForwardStagger  class="about-content">
 
     <div class="animate-stagger about-container">
-      <div class="set-heading">about developer</div>
+      <div class="set-heading"> backgrond</div>
       <div class="set-container">
         <p>
           <i class="bi bi-exclamation-square-fill"></i> I’m a passionate Frontend
