--- a/src/app/layout/site-identity/site-identity/site-identity.component.html
+++ b/src/app/layout/site-identity/site-identity/site-identity.component.html
@@ -16,7 +16,7 @@
       </div>
       <p class="site-description" (click)="redirectToHome()">
         <!-- Front-End Developer (Angular) -->
-         Showcasing skills
+         Showcasing <span class="highlighter">Angular</span> Skills
       </p>
     </div>
   </div>
