--- a/src/app/layout/navbar/navbar/navbar.component.html
+++ b/src/app/layout/navbar/navbar/navbar.component.html
@@ -11,11 +11,24 @@
     </button>
 
     <ul class="navbar__menu" [class.active]="isMenuOpen">
-      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/home" routerLinkActive="active" >Home</a></li>
-      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" ><a routerLink="/about" routerLinkActive="active"  >About</a></li>
-      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" ><a routerLink="/skills-set" routerLinkActive="active"  >Skills</a></li>
-      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }" ><a routerLink="/projects" routerLinkActive="active"  >Projects</a></li>
-      <li  routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }"><a routerLink="/contact" routerLinkActive="active"  >Contact</a></li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/home" routerLinkActive="active">
+          <i class="bi bi-house-door-fill"></i>
+          Home
+        </a>
+      </li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/about" routerLinkActive="active">About</a>
+      </li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/skills-set" routerLinkActive="active">Skills</a>
+      </li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/projects" routerLinkActive="active">Projects</a>
+      </li>
+      <li routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true }">
+        <a routerLink="/contact" routerLinkActive="active">Contact</a>
+      </li>
     </ul>
   </nav>
 </div>
