--- a/src/styles/pages/_projects.scss
+++ b/src/styles/pages/_projects.scss
@@ -143,7 +143,7 @@
 
     .featured-projects {
         display: grid;
-        grid-template-columns: 1fr 1fr 1fr;
+        grid-template-columns: 1fr 1fr;
         gap: 15px;
         margin-top: -10px;
         //  border: 1px solid #e5e5e5;
