Updated route module for each component

--- a/src/app/features/home/pages/home/home.component.html
+++ b/src/app/features/home/pages/home/home.component.html
@@ -42,13 +42,13 @@
         <i class="bi bi-check-circle-fill"></i>Angular/TypeScript
       </div>
       <div class="developer-skill animate-stagger">
-        <i class="bi bi-check-circle-fill"></i>RESTful API
+        <i class="bi bi-check-circle-fill"></i>RESTful API Integration
       </div>
       <div class="developer-skill animate-stagger">
         <i class="bi bi-check-circle-fill"></i>Unit Testing
       </div>
       <div class="developer-skill animate-stagger">
-        <i class="bi bi-check-circle-fill"></i>Source Control (GitHub)
+        <i class="bi bi-check-circle-fill"></i>Git (Source Control)
       </div>
     </div>
 
